# backtester

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  STRATEGY_DOCUMENTATION.md  __init__.py  config.py  final_stats.py  intraday.py  new_strategy.py  new_strategy_only_long.py  old_strategy.py  pyproject.toml  requirements.txt  summary.txt
trade_logs/: summary_daily_all.csv  trade_log_2025-07-01.csv  trade_log_2025-07-02.csv  trade_log_2025-07-03.csv  trade_log_2025-07-04.csv  trade_log_2025-07-07.csv  trade_log_2025-07-08.csv  trade_log_2025-07-09.csv  trade_log_2025-07-10.csv  trade_log_2025-07-11.csv  trade_log_2025-07-14.csv  trade_log_2025-07-15.csv  trade_log_2025-07-16.csv  trade_log_2025-07-17.csv  trade_log_2025-07-18.csv  trade_log_2025-07-21.csv  trade_log_2025-07-22.csv  trade_log_2025-07-23.csv  trade_log_2025-07-24.csv  trade_log_2025-07-25.csv  trade_log_2025-07-28.csv  trade_log_2025-07-29.csv  trade_log_2025-07-30.csv  trade_log_2025-07-31.csv  trade_log_2025-08-01.csv  trade_log_2025-08-04.csv  trade_log_2025-08-05.csv  trade_log_2025-08-06.csv  trade_log_2025-08-07.csv  trade_log_2025-08-08.csv  trade_log_2025-08-11.csv  trade_log_2025-08-12.csv  trade_log_2025-08-14.csv  trade_log_2025-08-18.csv  trade_log_2025-08-19.csv  trade_log_2025-08-20.csv  trade_log_2025-08-21.csv  trade_log_2025-08-22.csv  trade_log_2025-08-25.csv  trade_log_2025-08-26.csv  (+1 more)
trade_logs_new_strategy/: all_trades.csv  daily_summary.csv  equity_curve.csv  trade_log_2025-08-01.csv  trade_log_2025-08-04.csv  trade_log_2025-08-05.csv  trade_log_2025-08-06.csv  trade_log_2025-08-07.csv  trade_log_2025-08-08.csv  trade_log_2025-08-11.csv  trade_log_2025-08-12.csv  trade_log_2025-08-14.csv  trade_log_2025-08-18.csv  trade_log_2025-08-19.csv  trade_log_2025-08-20.csv  trade_log_2025-08-21.csv  trade_log_2025-08-22.csv  trade_log_2025-08-25.csv  trade_log_2025-08-26.csv  trade_log_2025-08-28.csv
trade_logs_only_long/: all_trades.csv  daily_summary.csv  trade_log_2025-08-01.csv  trade_log_2025-08-04.csv  trade_log_2025-08-05.csv  trade_log_2025-08-06.csv  (+13 more)
(+40 files in other folders)
