[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intraday-ema-rsi-backtester"
version = "1.0.0"
description = "A Python-based backtesting framework for intraday trading strategies on NSE stocks using EMA crossovers and RSI indicators"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Shadab", email = "shadab@example.com"}
]
keywords = [
    "backtesting",
    "trading",
    "intraday",
    "NSE",
    "stocks",
    "EMA",
    "RSI",
    "technical-analysis",
    "quantitative-finance"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "tqdm>=4.64.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/shadab28/backtester"
Repository = "https://github.com/shadab28/backtester"
Issues = "https://github.com/shadab28/backtester/issues"

[project.scripts]
backtest-long = "backtester.new_strategy_only_long:main"
backtest-full = "backtester.new_strategy:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
